--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,11 @@
 <ion-menu [content]="content">
-  <ion-content>
+  <ion-content class="pageView">
     <ion-list no-lines>
       <ion-item text-center color="primary">
         <img height="100" width="100" src="../assets/imgs/timemachine.png"/>
         <ion-title>SPACE X API</ion-title>
       </ion-item>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button class="semi-transparent" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
