--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,24 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.pageView {
+    background-color: rgb(0, 6, 83)
+}
+
+.semi-transparent {
+    background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+}
+
+.transparent {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+}
+
+toolbar-background {
+    background-color: cyan
+}
+h2, p {
+    color: white;
+}
