--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,13 @@
     background-color: rgb(0, 6, 83)
 }
 
+.cell {
+    border-radius: 10px 10px 10px 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+    margin:10px auto;
+}
+
 .semi-transparent {
     background-color: rgba(255, 255, 255, 0.3);
     color: white;
