--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -26,6 +26,13 @@
     margin:10px auto;
 }
 
+.cardContent {
+    border-radius: 10px 10px 10px 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+    margin:10px auto;
+}
+
 .semi-transparent {
     background-color: rgba(255, 255, 255, 0.3);
     color: white;
@@ -39,6 +46,7 @@
 toolbar-background {
     background-color: cyan
 }
+
 h2, p {
     color: white;
 }
