add of design and factorisation + deletion of unused code

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -27,6 +27,23 @@
     margin:10px auto;
 }
 
+.title-card {
+    color: #fff;
+    font-size: 35px;
+    text-align: center;
+}
+
+.subtitle-card {
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+}
+
+.content-card {
+    color: #fff;
+    font-size: 17px;
+}
+
 .cardContent {
     border-radius: 10px 10px 10px 10px;
     background-color: rgba(255, 255, 255, 0.3);
