--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,6 +38,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  wikipedia:  #f4f4f4,
+  youtube:    #ff0000,
+  reddit:     #ec5428,
   dark:       #222
 );
 
