--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,10 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  gray:       #5f5f5f,
   wikipedia:  #f4f4f4,
+  press:      #0d2c52,
+  article:    #2f5ca4,
   youtube:    #ff0000,
   reddit:     #ec5428,
   dark:       #222
