add of splashscreen and icon and quick refactor for build on device

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <ion-content class="pageView">
     <ion-list no-lines>
       <ion-item text-center color="primary">
-        <img height="100" width="100" src="../assets/imgs/timemachine.png"/>
+        <img height="100" width="100" src="assets/imgs/timemachine.png"/>
         <ion-title>SPACE X API</ion-title>
       </ion-item>
       <button class="semi-transparent" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
